fix: improve masonry tile in dark mode

--- a/pdl-live-react/src/view/Markdown.css
+++ b/pdl-live-react/src/view/Markdown.css
@@ -1,6 +1,5 @@
 .pf-v6-c-panel__main > .pdl-markdown {
   padding: 1em;
-  background-color: var(--pf-t--global--background--color--primary--default);
 }
 
 /* This is a theme distributed by `starry-night`.
